fixed ts font for wrapping

--- a/extensions/iwt-offer-management/assets/iwt-modal-styles.css
+++ b/extensions/iwt-offer-management/assets/iwt-modal-styles.css
@@ -291,6 +291,7 @@ cart-table th,
     font-size:12px !important;
     font-weight: 400;
     padding: 0px 20px 0px 20px !important;
+    margin: 0px 10px 0px 10px !important;
 }
 
 .button-container{
